# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2011
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#

Changes since last release:

VERSION 0.6.xx
DATE 05/14/2011
44th Alpha Release

NEWS:

NEW: [features/improvements]
+Updated all translations from launchpad site

LIBRARY:
+Fix PlateButton size being incorrectly calculated on GTK.

BUG FIXES:
+Fix crash in handling corrupt style sheet data
+Fix frame title not updating correctly when only one tab is open on Linux.
+Partial fix for screen flashing issue on Linux when using dark syntax
highlighting themes. Need to turn off code folding to stop the flashing.
+Fix tab context menu option for Close and Close All not working on Linux.
+Fix minor defect in OSX document icon (patch from auria)

#-----------------------------------------------------------------------------#

VERSION 0.6.48
DATE 05/14/2011
43rd Alpha Release

NEWS:

This release contains some noteable improvements to the Python autocompletion
support. It is more accurate and capabable of producing results under more
scenarios then before. These improvements also extend to the the calltip
support.

Big change in source distributions in this release as well. The primary launch
script is now all lower case. So where as before you would run 'Editra' it is
now standardized on 'editra' to fix a number of long running issues and confusion
with the script that is installed by the wxPython tools package.

For the complete change history please refer to the below changelog.

NEW: [features/enhancements]:
+Improved Python autocompletion, better detect local variables, properties, and
some minor performance improvements.
+Improved Python calltips. Calltips can now be shown more regularly and for
more objects.
+Launch script for source installs is now a lower case 'editra'.
+Source install on Windows now overwrites launch script installed by wxPython