@@ -18,6 +18,7 @@ NEWS:
 
 NEW: [features/improvements]
 +Updated all translations from launchpad site
++Add right click menu to Shelf tab area to open Shelf items.
 
 LIBRARY:
 +Fix PlateButton size being incorrectly calculated on GTK.
